--- a/Backend/src/Prediction/WSBInvestmentPredictor.Prediction.API/WSBInvestmentPredictor.Prediction.API.csproj
+++ b/Backend/src/Prediction/WSBInvestmentPredictor.Prediction.API/WSBInvestmentPredictor.Prediction.API.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.11.0" />
     <PackageReference Include="MediatR" Version="12.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.1" />
