--- a/Frontend/src/Client/WSBInvestmentPredictor.Frontend.Server/WSBInvestmentPredictor.Frontend.Server.csproj
+++ b/Frontend/src/Client/WSBInvestmentPredictor.Frontend.Server/WSBInvestmentPredictor.Frontend.Server.csproj
@@ -9,6 +9,7 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="9.0.4" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.4" />
+		<PackageReference Include="Radzen.Blazor" Version="6.6.4" />
 	</ItemGroup>
 
 	<ItemGroup>
