--- a/Frontend/src/Client/WSBInvestmentPredictor.Frontend.Shared/WSBInvestmentPredictor.Frontend.Shared.csproj
+++ b/Frontend/src/Client/WSBInvestmentPredictor.Frontend.Shared/WSBInvestmentPredictor.Frontend.Shared.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.2" PrivateAssets="all" />
+    <PackageReference Include="Radzen.Blazor" Version="6.6.4" />
   </ItemGroup>
 
 </Project>
