--- a/Backend/src/Prediction/WSBInvestmentPredictor.Predictor.Infrastructure/WSBInvestmentPredictor.Prediction.Infrastructure.csproj
+++ b/Backend/src/Prediction/WSBInvestmentPredictor.Predictor.Infrastructure/WSBInvestmentPredictor.Prediction.Infrastructure.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.4" />
     <PackageReference Include="Microsoft.ML" Version="4.0.2" />
     <PackageReference Include="Microsoft.ML.FastTree" Version="4.0.2" />
   </ItemGroup>
