--- a/Backend/src/Prediction/WSBInvestmentPredictor.Prediction.Application/WSBInvestmentPredictor.Prediction.Application.csproj
+++ b/Backend/src/Prediction/WSBInvestmentPredictor.Prediction.Application/WSBInvestmentPredictor.Prediction.Application.csproj
@@ -13,6 +13,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\WSBInvestmentPredictor.Prediction.Domain\WSBInvestmentPredictor.Prediction.Domain.csproj" />
+    <ProjectReference Include="..\WSBInvestmentPredictor.Prediction.Infrastructure\WSBInvestmentPredictor.Prediction.Infrastructure.csproj" />
+    <ProjectReference Include="..\WSBInvestmentPredictor.Prediction.InternalShared\WSBInvestmentPredictor.Prediction.InternalShared.csproj" />
   </ItemGroup>
 
 </Project>
