--- a/Backend/src/Prediction/WSBInvestmentPredictor.Prediction.Domain/WSBInvestmentPredictor.Prediction.Domain.csproj
+++ b/Backend/src/Prediction/WSBInvestmentPredictor.Prediction.Domain/WSBInvestmentPredictor.Prediction.Domain.csproj
@@ -10,4 +10,8 @@
     <Folder Include="ValueObjects\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\..\Shared\src\WSBInvestmentPredictor.Prediction.Shared\WSBInvestmentPredictor.Prediction.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
