Cleaning project architecture, remove controllers, add tests

--- a/Shared/src/Technology/WSBInvestmentPredictor.Technology/WSBInvestmentPredictor.Technology.csproj
+++ b/Shared/src/Technology/WSBInvestmentPredictor.Technology/WSBInvestmentPredictor.Technology.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.5.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel.Core" Version="2.3.0" />
   </ItemGroup>
 
 </Project>
