--- a/Backend/src/Prediction/WSBInvestmentPredictor.Prediction.API/WSBInvestmentPredictor.Prediction.API.csproj
+++ b/Backend/src/Prediction/WSBInvestmentPredictor.Prediction.API/WSBInvestmentPredictor.Prediction.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\Shared\src\Technology\WSBInvestmentPredictor.Technology\WSBInvestmentPredictor.Technology.csproj" />
     <ProjectReference Include="..\WSBInvestmentPredictor.Prediction.Application\WSBInvestmentPredictor.Prediction.Application.csproj" />
     <ProjectReference Include="..\WSBInvestmentPredictor.Prediction.Domain\WSBInvestmentPredictor.Prediction.Domain.csproj" />
     <ProjectReference Include="..\WSBInvestmentPredictor.Prediction.Application\WSBInvestmentPredictor.Prediction.Application.csproj" />
