--- a/Frontend/src/Client/WSBInvestmentPredictor.Frontend.Shared/WSBInvestmentPredictor.Frontend.Shared.csproj
+++ b/Frontend/src/Client/WSBInvestmentPredictor.Frontend.Shared/WSBInvestmentPredictor.Frontend.Shared.csproj
@@ -4,12 +4,21 @@
 		<TargetFramework>net9.0</TargetFramework>
 		<RazorLangVersion>9.0</RazorLangVersion>
 		<AddRazorSupportForMvc>true</AddRazorSupportForMvc>
+		<RootNamespace>WSBInvestmentPredictor.Frontend.Shared</RootNamespace>
 	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.2" PrivateAssets="all" />
-    <PackageReference Include="Radzen.Blazor" Version="6.6.4" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.2" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.2" PrivateAssets="all" />
+		<PackageReference Include="Microsoft.Extensions.Localization" Version="9.0.2" />
+		<PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="9.0.2" />
+		<PackageReference Include="Radzen.Blazor" Version="6.6.4" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<EmbeddedResource Update="Resources\SharedResource.resx" />
+		<EmbeddedResource Update="Resources\SharedResource.en.resx" />
+		<EmbeddedResource Update="Resources\SharedResource.pl.resx" />
+	</ItemGroup>
 
 </Project>
