--- a/Frontend/src/Client/WSBInvestmentPredictor.Frontend.Wasm/WSBInvestmentPredictor.Frontend.Wasm.csproj
+++ b/Frontend/src/Client/WSBInvestmentPredictor.Frontend.Wasm/WSBInvestmentPredictor.Frontend.Wasm.csproj
@@ -11,12 +11,14 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.2" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.Extensions.Localization" Version="9.0.2" />
     <PackageReference Include="Radzen.Blazor" Version="6.6.4" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\Shared\src\Technology\WSBInvestmentPredictor.Technology\WSBInvestmentPredictor.Technology.csproj" />
     <ProjectReference Include="..\..\Prediction\WSBInvestmentPredictor.Prediction\WSBInvestmentPredictor.Prediction.csproj" />
+    <ProjectReference Include="..\WSBInvestmentPredictor.Frontend.Shared\WSBInvestmentPredictor.Frontend.Shared.csproj" />
   </ItemGroup>
 
 </Project>
