--- a/Frontend/src/Prediction/WSBInvestmentPredictor.Prediction/WSBInvestmentPredictor.Prediction.csproj
+++ b/Frontend/src/Prediction/WSBInvestmentPredictor.Prediction/WSBInvestmentPredictor.Prediction.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
 <PropertyGroup>
   <TargetFramework>net9.0</TargetFramework>
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.2" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.AspNetCore.Localization" Version="2.3.0" />
+    <PackageReference Include="Microsoft.Extensions.Localization" Version="9.0.2" />
     <PackageReference Include="Radzen.Blazor" Version="6.6.4" />
   </ItemGroup>
 
