--- a/Backend/tests/Expenses/WSBInvestmentPredictor.Expenses.IntegrationTests/WSBInvestmentPredictor.Expenses.IntegrationTests.csproj
+++ b/Backend/tests/Expenses/WSBInvestmentPredictor.Expenses.IntegrationTests/WSBInvestmentPredictor.Expenses.IntegrationTests.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.5" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.6" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
         <PackageReference Include="xunit" Version="2.5.0" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.5.0" />
